# ComfyUI-ZhiHui

./: .gitignore  DATONG_GUIDE.md  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
js/: zh_drawing_board.js  zh_image_selector.js  zh_timeline_editor.js
nodes/api/: __init__.py  banana2xlyq_api.py  banana_two.py  doubao_v20.py
nodes/image/: __init__.py  background_remover.py  batch_loader.py  drawing_board.py  file_cleaner.py  file_organizer.py  grid_assembler.py  image_batch_loader.py  image_captioning.py  image_cropper.py  loader_plus.py  safe_loader.py  save_image_plus.py  save_image_with_time.py  save_psd.py  subfolder_loader_v3.py  zh_image_selector.py
nodes/text/: __init__.py  preset_loader.py  presets.json  text_operators.py
nodes/tools/: __init__.py  color_adjust.py  image_counter_loader.py  image_layout.py  image_switch.py  load_folder.py  make_batch.py  memory_optimizer.py  noise.py  random_prompt_combine.py  random_prompt_extract.py  run_node.py
nodes/video/: __init__.py  batch_video_loader.py  make_image_list.py  timeline_editor.py  video_saver.py
web/: zhihui_seed_control.js
