[project]
name = "ComfyUI-ZhiHui"
version = "1.0.0"
description = "智绘灵箱 - 功能丰富的 ComfyUI 自定义节点插件，提供图像处理、画板绘制、文本操作等多种实用功能"
authors = [{ name = "zhuyungen" }]
license = { file = "LICENSE" }
dependencies = [
    "torch",
    "numpy",
    "Pillow",
]

[project.urls]
Repository = "https://github.com/zhuyungen/ComfyUI-ZhiHui"

[tool.comfy]
publisher-id = "zhuyungen"
display-name = "智绘灵箱"
